Modifying cors to allow frontend routes